--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,19 @@ path = "src/lib.rs"
 [dependencies]
 actix-web = "=4.0.0-rc.3"
 tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1", features = ["derive"]}
+
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
+
 [dev-dependencies]
 reqwest = "0.11"
