--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 actix-web = "=4.0.0-rc.3"
 tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+config = "0.11"
 
 [dependencies.sqlx]
 version = "0.5.7"
