--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -10,11 +10,11 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        run: |
+      - run: |
           chmod +x ./scripts/init_db.sh
           ./scripts/init_db.sh
         shell: bash
+      - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
