--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -11,15 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-          chmod +x ./scripts/init_db.sh
-          ./scripts/init_db.sh
-        shell: bash
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
+      - run: |
+          chmod -R +x ./scripts
+          ./scripts/install_dependency.sh
+          ./scripts/init_db.sh
+        shell: bash
       - uses: actions-rs/cargo@v1
         with:
           command: test
