--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -53,7 +53,6 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: -- -D warnings
 
   coverage:
     name: Code coverage
@@ -67,7 +66,12 @@ jobs:
         with:
           toolchain: stable
           override: true
-
+      - run: |
+          chmod -R +x ./scripts
+          ./scripts/install_dependency.sh
+          ./scripts/init_db.sh
+        shell: bash
+        
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
